--- a/livescore-app/src/components/styles.module.css
+++ b/livescore-app/src/components/styles.module.css
@@ -150,7 +150,7 @@ h1 {
 .paperStandings {
     width: 50%;
     padding: 1rem;
-    opacity: 0.85
+    opacity: 0.9
 }
 
 .standingsLeagueName {
@@ -168,6 +168,10 @@ h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.9rem;
     font-weight: 500;
+}
+
+.arrowBack {
+    cursor: pointer;
 }
 
 /*Sign In */
