--- a/livescore-app/src/components/styles.module.css
+++ b/livescore-app/src/components/styles.module.css
@@ -1,4 +1,3 @@
-
 /* Całość projektu */
 :root{
     background-image: url('https://images.unsplash.com/photo-1544914379-806667cd9489?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80');
@@ -48,7 +47,28 @@ h1 {
     justify-content: space-between;
 }
 
-/*Livescore*/
+/*Scores */
+.scoreRow {
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr 2fr 1fr 4fr 1fr;
+}
+
+.dateDiv {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5rem;
+}
+
+.date {
+    border: 1px solid black;
+    border-radius: 0.25rem;
+    box-shadow: 10px 5px gray;
+    padding: 0.5rem 1rem;
+}
+
+/*Livescores and scores*/
 .livescoreTable {
     margin-bottom: 4rem;
     display: flex;
@@ -65,7 +85,7 @@ h1 {
 }
 
 .paper {
-    width: 50%;
+    width: 40%;
     padding: 1rem 0.5rem 1rem 1.5rem;
     margin: 0.5rem 0;
     opacity: 0.85
@@ -85,7 +105,7 @@ h1 {
 }
 
 .gameRow {
-    padding: 0.25rem 0;
+    padding: 0.15rem 0;
     display: grid;
     grid-template-columns: 1fr 4fr 1fr 2fr 1fr 4fr 1fr;
 }
@@ -168,10 +188,6 @@ h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.9rem;
     font-weight: 500;
-}
-
-.arrowBack {
-    cursor: pointer;
 }
 
 /*Sign In */
