--- a/livescore-app/src/components/styles.module.css
+++ b/livescore-app/src/components/styles.module.css
@@ -1,6 +1,8 @@
 /* Całość projektu */
 :root{
-    background-image: url('https://images.unsplash.com/photo-1544914379-806667cd9489?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80');
+    /* background-image: url('https://images.unsplash.com/photo-1544914379-806667cd9489?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80'); */
+    background-image: url('https://login.laczynaspilka.pl/auth/resources/3.4.3.final/login/pzpn/img/pzpn-bg.jpg?fbclid=IwAR2FRRxHZPHZd_oaODGKDnr53eVJHzv0xhDop1kagvnFZ27dJul8rsw4DUE');
+    background-size: cover;
     width: 100%;
 }
 
