--- a/livescore-app/src/components/styles.module.css
+++ b/livescore-app/src/components/styles.module.css
@@ -1,9 +1,11 @@
 /* Całość projektu */
 :root{
-    /* background-image: url('https://images.unsplash.com/photo-1544914379-806667cd9489?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80'); */
-    background-image: url('https://login.laczynaspilka.pl/auth/resources/3.4.3.final/login/pzpn/img/pzpn-bg.jpg?fbclid=IwAR2FRRxHZPHZd_oaODGKDnr53eVJHzv0xhDop1kagvnFZ27dJul8rsw4DUE');
+    background-image: url('https://images.unsplash.com/photo-1544914379-806667cd9489?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80');
+    /* background-image: url('https://login.laczynaspilka.pl/auth/resources/3.4.3.final/login/pzpn/img/pzpn-bg.jpg?fbclid=IwAR2FRRxHZPHZd_oaODGKDnr53eVJHzv0xhDop1kagvnFZ27dJul8rsw4DUE'); */
     background-size: cover;
+    /* background-repeat: no-repeat; */
     width: 100%;
+
 }
 
 h1 {
@@ -51,7 +53,7 @@ h1 {
 
 /*Scores */
 .scoreRow {
-    padding: 0;
+    padding: 0.25rem;
     display: grid;
     grid-template-columns: 1fr 4fr 1fr 2fr 1fr 4fr 1fr;
 }
@@ -89,7 +91,7 @@ h1 {
 .paper {
     width: 40%;
     padding: 1rem 0.5rem 1rem 1.5rem;
-    margin: 0.5rem 0;
+    margin: 0.5rem auto;
     opacity: 0.85
 }
 
@@ -118,11 +120,12 @@ h1 {
     align-items: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.95rem;
+    /* text-transform: uppercase; */
 }
 
 .teamLogo {
     width: 30px;
-    height: 30px
+    height: auto
 }
 
 .homeLogo {
@@ -153,6 +156,31 @@ h1 {
     align-items: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.95rem;
+    /* text-transform: uppercase; */
+}
+
+/* Schedule */
+.scheduleTime {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 0.7rem;
+    text-align: center;
+    font-weight: 700 ;
+    margin: 0 1rem;
+}
+
+.scheduleRow {
+    padding: 0.25rem;
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr 3.5fr 1fr 4fr 1fr;
+}
+
+.todayButton {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
 }
 
 /*MyTeams */
