--- a/livescore-app/src/components/styles.module.css
+++ b/livescore-app/src/components/styles.module.css
@@ -1,15 +1,13 @@
 /* Całość projektu */
 :root{
     background-image: url('https://images.unsplash.com/photo-1544914379-806667cd9489?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80');
-    /* background-image: url('https://login.laczynaspilka.pl/auth/resources/3.4.3.final/login/pzpn/img/pzpn-bg.jpg?fbclid=IwAR2FRRxHZPHZd_oaODGKDnr53eVJHzv0xhDop1kagvnFZ27dJul8rsw4DUE'); */
     background-size: cover;
-    /* background-repeat: no-repeat; */
     width: 100%;
 
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     letter-spacing: 0.3rem;
     margin: 1rem;
     text-align: center;
@@ -53,7 +51,7 @@ h1 {
 
 /*Scores */
 .scoreRow {
-    padding: 0.25rem;
+    padding: 0.15rem 0;
     display: grid;
     grid-template-columns: 1fr 4fr 1fr 2fr 1fr 4fr 1fr;
 }
@@ -74,7 +72,7 @@ h1 {
 
 /*Livescores and scores*/
 .livescoreTable {
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,14 +81,13 @@ h1 {
 .headerDiv {
     background-color: white;
     border-radius: 0.25rem;
-    width: 25%;
     opacity: 0.85;
     margin: 1rem auto;
 }
 
 .paper {
     width: 40%;
-    padding: 1rem 0.5rem 1rem 1.5rem;
+    padding: 0.8rem;
     margin: 0.5rem auto;
     opacity: 0.85
 }
@@ -99,6 +96,7 @@ h1 {
     margin-top: 1rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .leagueName {
@@ -158,12 +156,20 @@ h1 {
 }
 
 /* Schedule */
+
+.paperSchedule {
+    width: 40%;
+    padding: 0.8rem;
+    margin: 0.5rem auto;
+    opacity: 0.85
+}
+
 .scheduleTime {
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     text-align: center;
     font-weight: 700 ;
     margin: 0 1rem;
@@ -172,7 +178,7 @@ h1 {
 .scheduleRow {
     padding: 0.25rem;
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr 3.5fr 1fr 4fr 1fr;
+    grid-template-columns: 0.5fr 10fr 1fr 1fr 1fr 10fr 0.5fr;
 }
 
 .todayButton {
@@ -248,9 +254,78 @@ h1 {
     opacity: 0.9;
 }
 
+/* Standings button */
+.standingsButton {
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+}
 
+/* Responsiveness */
+@media (max-width: 1500px) {
+    .hometeamName, .awayteamName {
+        justify-content: center;
+    }
+    .paperSchedule {
+        width: 55%;
+    }
+}
 
+@media (max-width: 1100px) {
+    .paper {
+        width: 55%
+    }
+    .paperSchedule {
+        width: 65%;
+    }
+}
 
+@media (max-width: 850px) {
+    .paper{
+        width: 80%;
+        margin: 0 auto
+    }
+    .paperSchedule {
+        width: 85%;
+    }
+
+    .hometeamName, .awayteamName {
+        font-size: 0.8rem;
+    }
+}
+
+@media (max-width: 568px) {
+    .gameRow, .scoreRow, .scheduleRow { 
+        grid-template-columns: 0.5fr 6fr 4fr 6fr 0.5fr;
+    }
+
+    .leagueName {
+        font-size: 0.85rem;
+    }
+
+    .hometeamName, .awayteamName {
+        display: none;
+    }
+
+    .homeLogo, .awayLogo {
+        justify-content: center;
+    }
+
+    .standingsLogoText {
+        display: none
+    }
+
+    .date {
+        font-size: 1rem;
+        padding: 0.5rem;
+        box-shadow: 4px 2px gray; 
+    }
+
+    .todayButton {
+        font-size: 0.5rem;
+    }
+
+}
 
 
 
