--- a/livescore-app/src/components/styles.module.css
+++ b/livescore-app/src/components/styles.module.css
@@ -107,7 +107,7 @@ h1 {
 }
 
 .gameRow {
-    padding: 0.15rem 0;
+    /* padding: 0.05rem 0; */
     display: grid;
     grid-template-columns: 1fr 4fr 1fr 2fr 1fr 4fr 1fr;
 }
@@ -121,7 +121,7 @@ h1 {
 }
 
 .teamLogo {
-    width: 30px;
+    width: 25px;
     height: auto
 }
 
@@ -194,7 +194,7 @@ h1 {
 
 .favouriteTeamList {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     padding: 0 1rem
 } 
 
@@ -204,6 +204,14 @@ h1 {
     display: grid;
     grid-template-columns: 1.5fr repeat(4,1fr);
     text-align: center;
+}
+
+.logoFavTeam {
+    display: inline;
+}
+
+.teamLogoFav {
+    width: 20px;
 }
 
 /*Standings */
@@ -273,6 +281,7 @@ h1 {
     font-weight: 700;
     display: flex;
     align-items: center;
+    font-size: 0.7rem;
 }
 
 /*Auth */
@@ -285,6 +294,10 @@ h1 {
 
 /* Responsiveness */
 @media (max-width: 1500px) {
+    .paper {
+        width: 50%;
+    }
+
     .hometeamName, .awayteamName {
         justify-content: center;
     }
@@ -330,7 +343,7 @@ h1 {
     }
 
     .hometeamName, .awayteamName {
-        font-size: 0.8rem;
+        font-size: 0.85rem;
     }
     
     .standingsCellToHide {
@@ -397,10 +410,6 @@ h1 {
         box-shadow: 4px 2px gray; 
     }
 
-    .todayButton {
-        font-size: 0.5rem;
-    }
-
     .loggedUser {
         display: none;
     }
@@ -426,6 +435,10 @@ h1 {
         margin: 0 2rem
     } 
 
+    .teamLogo {
+        width: 35px
+    }
+
 
 }
 
@@ -444,6 +457,10 @@ h1 {
 
     .eventDate {
         display: none;
+    }
+
+    .teamLogo {
+        width: 25px
     }
 }
 
