--- a/livescore-app/src/components/styles.module.css
+++ b/livescore-app/src/components/styles.module.css
@@ -284,6 +284,11 @@ h1 {
     font-size: 0.7rem;
 }
 
+.link{
+    text-decoration: none;
+    color: black;
+}
+
 /*Auth */
 .paperAuth {
     width: 600px;
